--- a/es/index.html
+++ b/es/index.html
@@ -314,12 +314,12 @@
                   </div>
                 </div>
                 <div class="grid-4">
-                  <img src="/img/who/alberto.jpg" alt="">
-                  <p><span><strong>Alberto Gómez Toribio</strong></span><span> es el <strong>CTO</strong> de la compañía.</span>
+                  <img src="img/who/santiago.jpg" alt="">
+                  <p><span><strong>Santiago Márquez Solís</strong></span><span> is the <strong>CTO</strong> of the company.</span>
                   <div class="rrss_access">
-                    <a href="http://twitter.com/gotoalberto" target="_blank"><img src="/img/who/ico-twitter-slide.png" alt=""></a>
-                    <a href="http://linkedin.com/in/gotoalberto" target="_blank"><img src="/img/who/ico-linkedin-slide.png" alt=""></a>
-                    <a href="http://github.com/gotoalberto" target="_blank"><img src="/img/who/ico-github-slide.png" alt=""></a>
+                    <a href="http://twitter.com/smarquezsolis" target="_blank"><img src="img/who/ico-twitter-slide.png" alt=""></a>
+                    <a href="http://linkedin.com/in/santiago-márquez-solís-9111a617" target="_blank"><img src="img/who/ico-linkedin-slide.png" alt=""></a>
+                    <a href="http://github.com/smarquezsolis" target="_blank"><img src="img/who/ico-github-slide.png" alt=""></a>
                   </div>
                 </div>
                 <div class="grid-4">
