--- a/es/index.html
+++ b/es/index.html
@@ -314,7 +314,7 @@
                   </div>
                 </div>
                 <div class="grid-4">
-                  <img src="img/who/santiago.jpg" alt="">
+                  <img src="/img/who/santiago.jpg" alt="">
                   <p><span><strong>Santiago Márquez Solís</strong></span><span> is the <strong>CTO</strong> of the company.</span>
                   <div class="rrss_access">
                     <a href="http://twitter.com/smarquezsolis" target="_blank"><img src="/img/who/ico-twitter-slide.png" alt=""></a>
