--- a/es/index.html
+++ b/es/index.html
@@ -315,7 +315,7 @@
                 </div>
                 <div class="grid-4">
                   <img src="/img/who/santiago.jpg" alt="">
-                  <p><span><strong>Santiago Márquez Solís</strong></span><span> is the <strong>CTO</strong> of the company.</span>
+                  <p><span><strong>Santiago Márquez Solís</strong></span><span> es el <strong>CTO</strong> de la compañía.</span>
                   <div class="rrss_access">
                     <a href="http://twitter.com/smarquezsolis" target="_blank"><img src="/img/who/ico-twitter-slide.png" alt=""></a>
                     <a href="http://linkedin.com/in/santiago-márquez-solís-9111a617" target="_blank"><img src="/img/who/ico-linkedin-slide.png" alt=""></a>
